sass/style.scss
// Juice
@import "dist/juice";

// Partials
@import "colors";
@import "fonts";

// Twitter Bootstrap
@import "variables";
@import "bootstrap";

// Font Awesome
@import "font-awesome";


///////////////////////////////////
// General
///////////////////////////////////
*,
*:before,
*:after {
	transition: 0.3s ease-out;
}

b, strong,
i, em,
span {
	transition: 0 !important;
	&:before,
	&:after {
		transition: 0 !important;
	}
}

html,
html a {
  -webkit-font-smoothing: antialiased;
  text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
}

html {
	min-width: 20rem;
}

body {
	position: relative;
}

a {
	@include hoverer(color, $dark-blue, $purple);
}

hr {
	border-color: #ddd;
}

h1,h2,h3,
h4,h5,h6 {
	margin: 0;
}

p {
	text-align: justify;
}


///////////////////////////////////
// Header
///////////////////////////////////
.navbar-header {
	position: relative;
}
.navbar-toggle {
	@include absolute(50%, 0);
	transform: translateY(-50%);
	.icon-bar {
		background-color: $teal !important;
	}
	&.collapsed .icon-bar {
		background-color: $white !important;
	}
}
.navbar-brand {
	font-family: $raleway;
	font-size: 3rem;
	line-height: 1;
}
#main-navigation {
	.navbar-nav {
		float: none;
		text-align: center;
		margin: 0;
		li {
			float: none;
			display: inline-block;
		}
	}
}
.navbar {
	border: 0;
}
.navbar-collapse {
	box-shadow: none;
}
.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus {
	background: $teal;
	color: $dark-blue;
}

.hero {
	text-align: center;
	background: $dark-blue;
	padding: 80px 0 40px;
	border-bottom: 5px solid $teal;
	h1,
	h2 {
		font-weight: 200;
	}
	h1 {
		color: $purple;
		font-size: 11rem;
	}
	h2 {
		color: $white;
	}
}


///////////////////////////////////
// Overview
///////////////////////////////////
.overview-links {
	margin-top: 20px;
	text-align: center;
	ul {
		list-style: none;
		margin: 0;
		padding: 0;
		li {
			line-height: 1;
			padding: 5px;
		}
	}
	h4 {
		display: inline-block;
		border-bottom: 1px solid $dark-blue;
	}
	@include bp(max, rem-calc(400)) {
		[class^="col-xs-"] {
			width: 50%;
			margin-bottom: 10px;
		}
	}
}


///////////////////////////////////
// Main Content
///////////////////////////////////
section {
	padding-top: 40px;
}

article {
	float: none;
	width: 100%;
	max-width: 768px;
	margin: 0 auto;
}

.section-heading {
	padding: 30px;
	text-align: center;
	border: solid $dark-blue;
	border-width: 1px 0;
	h3 {
		letter-spacing: 2px;
		color: $purple;
	}
}

article:not(.section-heading) {
	position: relative;
	padding: 0 10px 10px 10px;
	h3,h4 {
		margin-bottom: 5px;
	}
	h3 {
		display: inline-block;
		margin-right: 15px;
	}
	.article-header {
		padding-top: 70px;
	}
	.show-source {
		display: inline-block;
		outline: none;
		cursor: pointer;
		font-size: 2.5rem;
	}
	.description {
		font-style: italic;
	}
}

.popover {
	left: 50% !important;
	width: 100%;
	transform: translateX(-50%);
	&.bottom > .arrow {
		left: 85%;
	}
}

.popover-content {
	padding: 11px 11px 0 11px;
}

///////////////////////////////////
// Setup
///////////////////////////////////
.download-repo {
	border: 1px solid $purple;
	color: $dark-blue;
	padding: 10px 15px;
	&:hover {
		color: $dark-blue;
		border-color: $teal;
	}
}

///////////////////////////////////
// Code Styling
///////////////////////////////////
@import "code_styles/obsidian-mod";

pre {
	padding: 0 !important;
}
code {
	padding: 20px !important;
	@include bp(max, rem-calc(768)) {
		font-size: 1.2rem !important;
	}
}


///////////////////////////////////
// Footer
///////////////////////////////////
.top {
	@include fixed(null,null,-30px,10px);
	@include square(30px);
	background: $dark-blue;
	line-height: 1;
	opacity: 0;
	border-radius: 5px;
	@include triangle(up,5px,$white) {
		@extend %centerer;
		transform: translate(-50%, -80%);
	}
	&.visible {
		bottom: 10px;
		opacity: 1;
	}
	&:hover {
		background: $purple;
	}
}

@keyframes pulse {
	from {
		transform: scale(1);
	}
	to {
		transform: scale(1.4);
	}
}
footer {
	font-size: 1.2rem;
	background: $dark-blue;
  padding: 20px 0;
  color: $white;
  .fa-heart {
  	padding: 0 4px;
  	color: #ff5555;
  	animation: pulse 1s ease-in-out infinite alternate;
  }
  a {
  	color: $white;
  }
  p {
	  text-align: center;
  	margin: 0;
  }
}

